--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
+    "grunt-css": "^0.5.4",
     "grunt-jscs": "^0.8.1"
   }
 }
