--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal web site files for http://pweb.netcom.com/~ghnagata/",
   "main": "server.js",
   "scripts": {
-    "test": "grunt",
+    "test": "node_modules/grunt-cli/bin/grunt",
     "start": "node server.js"
   },
   "repository": {
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
