--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "grunt-cli": "^0.1.13",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-css": "^0.5.4",
-    "grunt-jscs": "^0.8.1",
-    "grunt-sass": "^0.16.1"
+    "grunt-jscs": "^0.8.1"
   }
 }
