--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-browserify": "^3.2.1",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
