--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "netcompweb",
   "version": "0.0.1",
   "description": "Personal web site files for http://pweb.netcom.com/~ghnagata/",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "node_modules/grunt-cli/bin/grunt",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
