--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.10.1"
   },
   "devDependencies": {
+    "async": "^0.9.0",
+    "chai": "^1.10.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
     "grunt-cli": "^0.1.13",
@@ -29,6 +31,8 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-css": "^0.5.4",
     "grunt-jscs": "^0.8.1",
-    "grunt-sass": "^0.16.1"
+    "grunt-sass": "^0.16.1",
+    "grunt-simple-mocha": "^0.4.0",
+    "superagent": "^0.21.0"
   }
 }
