--- a/package.json
+++ b/package.json
@@ -31,8 +31,14 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-css": "^0.5.4",
     "grunt-jscs": "^0.8.1",
+    "grunt-karma": "^0.9.0",
     "grunt-sass": "^0.16.1",
     "grunt-simple-mocha": "^0.4.0",
+    "jasmine-core": "^2.1.3",
+    "jquery": "^2.1.1",
+    "karma": "^0.12.28",
+    "karma-jasmine": "^0.3.2",
+    "karma-phantomjs-launcher": "^0.1.4",
     "superagent": "^0.21.0"
   }
 }
