--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/HIROSN/netcompweb",
   "dependencies": {
-    "express": "^4.10.1"
+    "express": "^4.10.1",
+    "jquery": "^2.1.1"
   },
   "devDependencies": {
     "async": "^0.9.0",
@@ -35,7 +36,6 @@
     "grunt-sass": "^0.16.1",
     "grunt-simple-mocha": "^0.4.0",
     "jasmine-core": "^2.1.3",
-    "jquery": "^2.1.1",
     "karma": "^0.12.28",
     "karma-jasmine": "^0.3.2",
     "karma-phantomjs-launcher": "^0.1.4",
