--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/HIROSN/netcompweb",
   "dependencies": {
+    "angular": "^1.3.5",
     "express": "^4.10.1",
     "jquery": "^2.1.1"
   },
