--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-css": "^0.5.4",
+    "grunt-html2js": "^0.2.9",
     "grunt-jscs": "^0.8.1",
     "grunt-karma": "^0.9.0",
     "grunt-sass": "^0.16.1",
