--- a/package.json
+++ b/package.json
@@ -18,31 +18,32 @@
   },
   "homepage": "https://github.com/HIROSN/netcompweb",
   "dependencies": {
-    "angular": "^1.3.5",
-    "express": "^4.10.1",
-    "jquery": "^2.1.1"
+    "angular": "^1.5.0",
+    "express": "^4.13.4",
+    "jquery": "^2.2.1"
   },
   "devDependencies": {
-    "async": "^0.9.0",
-    "chai": "^1.10.0",
+    "async": "^1.5.2",
+    "chai": "^3.5.0",
     "grunt": "^0.4.5",
-    "grunt-browserify": "^3.2.1",
+    "grunt-browserify": "^4.0.1",
     "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-htmlmin": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-uglify": "^1.0.0",
     "grunt-css": "^0.5.4",
-    "grunt-html2js": "^0.2.9",
-    "grunt-jscs": "^0.8.1",
-    "grunt-karma": "^0.9.0",
-    "grunt-sass": "^1.0.0",
-    "grunt-simple-mocha": "^0.4.0",
-    "jasmine-core": "^2.1.3",
-    "karma": "^0.12.28",
-    "karma-jasmine": "^0.3.2",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "superagent": "^0.21.0"
+    "grunt-html2js": "^0.3.5",
+    "grunt-jscs": "^2.8.0",
+    "grunt-karma": "^0.12.1",
+    "grunt-sass": "^1.1.0",
+    "grunt-simple-mocha": "^0.4.1",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.21",
+    "karma-jasmine": "^0.3.7",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.4",
+    "superagent": "^1.7.2"
   }
 }
