--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "angular": "^1.5.9",
     "express": "^4.14.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.1.1"
   },
   "devDependencies": {
