--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
+    "three": "^0.82.1",
     "webvr-polyfill": "^0.9.24"
   },
   "devDependencies": {
