--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   },
   "homepage": "https://github.com/HIROSN/netcompweb",
   "dependencies": {
-    "angular": "^1.7.0",
+    "angular": "^1.7.2",
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "three": "^0.92.0",
-    "webvr-polyfill": "^0.10.5"
+    "three": "^0.93.0",
+    "webvr-polyfill": "^0.10.6"
   },
   "devDependencies": {
-    "async": "^2.6.0",
+    "async": "^2.6.1",
     "chai": "^4.1.2",
-    "grunt": "^1.0.2",
+    "grunt": "^1.0.3",
     "grunt-browserify": "^5.3.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-clean": "^1.1.0",
@@ -42,8 +42,9 @@
     "grunt-karma": "^2.0.0",
     "grunt-sass": "^2.1.0",
     "grunt-simple-mocha": "^0.4.1",
+    "hoek": "^5.0.3",
     "jasmine-core": "^3.1.0",
-    "karma": "^2.0.2",
+    "karma": "^2.0.3",
     "karma-jasmine": "^1.1.2",
     "karma-phantomjs-launcher": "^1.0.4",
     "phantomjs-prebuilt": "^2.1.16",
