--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.16.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "three": "^0.93.0",
+    "three": "^0.94.0",
     "webvr-polyfill": "^0.10.6"
   },
   "devDependencies": {
@@ -40,13 +40,14 @@
     "grunt-html2js": "^0.5.1",
     "grunt-jscs": "^3.0.1",
     "grunt-karma": "^2.0.0",
-    "grunt-sass": "^2.1.0",
+    "grunt-sass": "^3.0.0",
     "grunt-simple-mocha": "^0.4.1",
     "hoek": "^5.0.3",
     "jasmine-core": "^3.1.0",
     "karma": "^2.0.4",
     "karma-jasmine": "^1.1.2",
     "karma-phantomjs-launcher": "^1.0.4",
+    "node-sass": "^4.9.0",
     "phantomjs-prebuilt": "^2.1.16",
     "superagent": "^3.8.3"
   }
